// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calls loadCountries prop if countries array is empty 1`] = `
<div
  className="countries"
>
  <h1
    className="countries__title"
  >
    Countries List
  </h1>
  <div
    className="countries__container"
  >
    <nav
      className="countries__list"
    />
  </div>
</div>
`;

exports[`Renders countries list 1`] = `
<div
  className="countries"
>
  <h1
    className="countries__title"
  >
    Countries List
  </h1>
  <div
    className="countries__container"
  >
    <nav
      className="countries__list"
    >
      <a
        className="countries__list__item"
        href="/countries/AA"
        onClick={[Function]}
      >
        First name
      </a>
      <a
        className="countries__list__item"
        href="/countries/BB"
        onClick={[Function]}
      >
        Second name
      </a>
    </nav>
  </div>
</div>
`;
